--- a/app/home/home.html
+++ b/app/home/home.html
@@ -14,7 +14,7 @@
       </li>
     </ul>
 
-    <ul class="actions" n`g-show="!session">
+    <ul class="actions" ng-show="!session">
     <ul class="actions">
       <li><a href="#" class="button" ng-click="authCtrl.login()">Join this Adventure →</a></li>
     </ul>
