Update Google webfonts request to use SSL

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -41,17 +41,16 @@
       </ul>
     </footer>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-69243589-1', 'auto');
        ga('send', 'pageview');
     </script>
-    -->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
